Adicionei novo paragrafo a index.html

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,6 +10,6 @@
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse illum, nihil consequatur repudiandae quidem ullam nesciunt facilis voluptatum quam tenetur officiis, beatae voluptates et! Accusantium dolorem obcaecati veritatis corrupti expedita.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore rem non excepturi dicta incidunt tempore, ullam nihil sed tenetur quam et architecto doloremque nostrum quisquam? Aliquam nulla laudantium corrupti provident?</p>
-    
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus, quibusdam tempore deleniti eos eaque nemo? Id ratione ipsum amet ea quos accusamus natus corrupti quis! Iusto, delectus vero. Necessitatibus, libero?</p>
 </body>
 </html>
